[gd_scene load_steps=5 format=3 uid="uid://cy12twy20ij2a"]

[ext_resource type="Script" path="res://game/NameEntry.gd" id="1_qkuof"]
[ext_resource type="FontFile" path="res://assets/snack_omeal/Snack Omeal.ttf" id="2_42nx2"]
[ext_resource type="Texture2D" path="res://assets/186407_arrow_up_icon.png" id="3_gps5o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3i1e"]
bg_color = Color(0.337255, 0.14902, 0.568627, 0.592157)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="NameEntry" type="Panel"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkuof")

[node name="Highlight" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 378.0
offset_top = 159.0
offset_right = 512.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3i1e")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 101.0
offset_right = 134.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_42nx2")
theme_override_font_sizes/font_size = 20
text = "Your score is in the top 10!"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Letter0" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Up" type="TextureRect" parent="HBoxContainer/Letter0"]
layout_mode = 2
texture = ExtResource("3_gps5o")

[node name="Letter" type="Label" parent="HBoxContainer/Letter0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_42nx2")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Down" type="TextureRect" parent="HBoxContainer/Letter0"]
layout_mode = 2
texture = ExtResource("3_gps5o")
flip_v = true

[node name="Letter1" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Up" type="TextureRect" parent="HBoxContainer/Letter1"]
layout_mode = 2
texture = ExtResource("3_gps5o")

[node name="Letter" type="Label" parent="HBoxContainer/Letter1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_42nx2")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Down" type="TextureRect" parent="HBoxContainer/Letter1"]
layout_mode = 2
texture = ExtResource("3_gps5o")
flip_v = true

[node name="Letter2" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Up" type="TextureRect" parent="HBoxContainer/Letter2"]
layout_mode = 2
texture = ExtResource("3_gps5o")

[node name="Letter" type="Label" parent="HBoxContainer/Letter2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_42nx2")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Down" type="TextureRect" parent="HBoxContainer/Letter2"]
layout_mode = 2
texture = ExtResource("3_gps5o")
flip_v = true
